tests/unit_tests/sema/builtin_missing_diag_01.cc
// RUN: %cxx -verify -fcheck %s

// expected-error@1 {{unknown builtin function '__builtin_shufflevector'}}
int x = __builtin_shufflevector();
